fix(matchcard): flag teamB visible + ellipse nom tronqué fonctionnelle

--- a/src/components/calendrier/MatchCard.module.css
+++ b/src/components/calendrier/MatchCard.module.css
@@ -89,8 +89,7 @@
 }
 
 .teamWrap.right {
-  display: flex;
-  justify-content: flex-end;
+  text-align: right;
 }
 
 .footer {
